# VATEAM

./: .gitignore  README.md  config.sh  list_weather_presets.py  pyproject.toml  run_evaluation.sh
leaderboard/leaderboard/: leaderboard_evaluator_local.py
leaderboard/leaderboard/envs/: sensor_interface.py
leaderboard/scripts/: local_evaluation.sh
results/: evaluation.json
results/parsed(nominal)/: results.csv
src/: __init__.py  leaderboard_config.py  run_evaluation.py
src/carla_interface/: __init__.py  sensors.py  simulator.py
src/compatibility/: __init__.py  args.txt  leaderboard_eval.py
src/config/: settings.py
src/visualization/: renderer.py
team_code_transfuser/: data.py  model.py  submission_agent.py  train.py
tools/: result_parser.py
